//plugins {
//	id 'java'
////	id 'org.springframework.boot' version '3.2.0-SNAPSHOT'
//	id 'org.springframework.boot' version '3.2.0-M2'
//	id 'io.spring.dependency-management' version '1.1.4'
//}
//
//group = 'com'
//version = '0.0.1-SNAPSHOT'
//
//java {
//	sourceCompatibility = '21'
//}
//
//configurations {
//	compileOnly {
//		extendsFrom annotationProcessor
//	}
//}
//
//repositories {
//	mavenCentral()
//	maven { url 'https://repo.spring.io/milestone' }
//	maven { url 'https://repo.spring.io/snapshot' }
//}
//
//dependencies {
//	implementation 'org.springframework.boot:spring-boot-starter-actuator'
//	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
//	implementation 'org.springframework.boot:spring-boot-starter-validation'
//	implementation 'org.springframework.boot:spring-boot-starter-web'
//	implementation 'org.springframework.boot:spring-boot-starter-webflux'
//	compileOnly 'org.projectlombok:lombok'
//	runtimeOnly 'com.mysql:mysql-connector-j'
//	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
//	annotationProcessor 'org.projectlombok:lombok'
//	testImplementation 'org.springframework.boot:spring-boot-starter-test'
//	testImplementation 'io.projectreactor:reactor-test'
//}
//
//tasks.named('test') {
//	useJUnitPlatform()
//}

plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.0-M2'
	id 'io.spring.dependency-management' version '1.1.3'
	id 'org.graalvm.buildtools.native' version '0.9.24'
}

group = 'com'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '21'
}

graalvmNative {

	binaries {
		main {
			buildArgs.add('--enable-preview')
			javaLauncher.set(javaToolchains.launcherFor {
				languageVersion.set(JavaLanguageVersion.of(21))
			})
		}
	}
}

//java {
//	toolchain { languageVersion = JavaLanguageVersion.of(21) }
//}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/snapshot' }
	maven { url 'https://repo.spring.io/milestone' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}